-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8008524 | 8 | Jon Masamitsu | P3 | Resolved | Fixed | b78 |
The current compute_new_size() for Metaspace uses the min/max free ratio flags
that are used for the resizing of the generations. The flag values are too agressive for
Metaspaces so separate flags are needed.
that are used for the resizing of the generations. The flag values are too agressive for
Metaspaces so separate flags are needed.
- backported by
-
JDK-8008524 NPG: Create new flags for Metaspace resizing policy
-
- Resolved
-