8005452: NPG: Create new flags for Metaspace resizing policy

Reviewed-by: johnc, jwilhelm, coleenp, stefank